# automouse

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  release.cmd  verify.ps1
icons/: app64.rgba
installer/: automouse.iss  build.ps1  release.ps1  upload.ps1
src/: main.rs
